--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "install-client": "npm install --prefix client",
     "install-server": "npm install --prefix server",
-    "install": "npm run install-server && npm install-client",
+    "install": "npm run install-server && npm run install-client",
     "client": "npm start --prefix client",
     "server": "npm run watch --prefix server",
     "watch": "npm run server & npm run client",
-    "deploy": "npm run build --prefix client && npm run server",
-    "test": "npm run test --prefix server && npm run test --prefix client"
+    "deploy": "npm run build --prefix client && npm start --prefix server",
+    "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
+    "test": "npm test --prefix server && npm test --prefix client"
   },
   "keywords": [],
   "author": "",
